--- a/app/routes/index.ejs
+++ b/app/routes/index.ejs
@@ -1,15 +1,12 @@
-<div class="jumbotron text-center mt-5">
-  <h1 class="display-4">PocketPages</h1>
-  <p class="lead">Dynamic web pages for PocketBase</p>
-  <hr class="my-4" />
-  <p>Getting started is simple:</p>
-  <pre
-    class="text-bg-secondary"
-  ><code class="lead">bunx pocketpages dev</code></pre>
-  <a
-    class="btn btn-primary btn-lg mt-3"
-    href="/docs/speedrun-hello"
-    role="button"
-    >Get Started</a
-  >
+<div class="hero min-h-screen bg-base-200">
+  <div class="hero-content text-center">
+    <div class="max-w-md">
+      <h1 class="text-5xl font-bold">PocketPages</h1>
+      <p class="py-6">Dynamic web apps powered by PocketBase.</p>
+      <div class="mockup-code text-left">
+        <pre data-prefix="$"><code>bunx pocketpages dev</code></pre>
+      </div>
+      <a href="/docs" class="btn btn-primary mt-4">Get Started</a>
+    </div>
+  </div>
 </div>
