--- a/app/routes/index.ejs
+++ b/app/routes/index.ejs
@@ -6,7 +6,9 @@
       <div class="mockup-code text-left">
         <pre data-prefix="$"><code>bunx pocketpages dev</code></pre>
       </div>
-      <a href="/docs" class="btn btn-primary mt-4">Get Started</a>
+      <a href="/docs/speedrun-hello" class="btn btn-primary mt-4"
+        >Get Started</a
+      >
     </div>
   </div>
 </div>
