--- a/app/pb_hooks/pages/(main)/docs/+layout.ejs
+++ b/app/pb_hooks/pages/(main)/docs/+layout.ejs
@@ -1,10 +1,5 @@
 <div class="flex flex-row">
-  <div class="flex flex-col justify-top p-10">
-    <h2>Speed Runs</h2>
-    <ul>
-      <li><a href="/docs/speedrun-hello">Up in 30 Seconds</a></li>
-    </ul>
-  </div>
+  <div class="flex flex-col justify-top p-2 toc"><%- include(`toc.md`) %></div>
   <div class="flex flex-col justify-top p-10">
     <article class="prose"><%- slot %></article>
   </div>
