--- a/app/app.css
+++ b/app/app.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .toc {
+    h1 {
+      @apply text-lg;
+    }
+    ul {
+      @apply pl-0;
+      @apply list-none;
+      @apply mt-0;
+    }
+    li {
+      @apply m-0 p-0;
+    }
+  }
+}
