--- a/app/pb_hooks/pages/(main)/+layout.ejs
+++ b/app/pb_hooks/pages/(main)/+layout.ejs
@@ -1,4 +1,4 @@
-<div class="drawer">
+<div class="drawers sticky">
   <input id="my-drawer-3" type="checkbox" class="drawer-toggle" />
   <div class="drawer-content flex flex-col">
     <!-- Navbar -->
