--- a/app/pb_hooks/pages/(main)/docs/+layout.ejs
+++ b/app/pb_hooks/pages/(main)/docs/+layout.ejs
@@ -1,5 +1,7 @@
 <div class="flex flex-row">
-  <div class="flex flex-col justify-top p-2 toc"><%- include(`toc.md`) %></div>
+  <div class="flex flex-col justify-top p-4 toc top-16 bg-neutral-200 w-52">
+    <%- include(`toc.md`) %>
+  </div>
   <div class="flex flex-col justify-top p-10">
     <article class="prose"><%- slot %></article>
   </div>
