--- a/app/pb_hooks/pages/(splash)/index.ejs
+++ b/app/pb_hooks/pages/(splash)/index.ejs
@@ -3,9 +3,7 @@
     <div class="w-full flex flex-col items-center">
       <h1 class="text-5xl font-bold">PocketPages</h1>
       <p class="">Like PHP, but JS + PocketBase</p>
-      <a href="/docs/speedrun-hello" class="btn btn-primary mt-4"
-        >Get Started</a
-      >
+      <a href="/docs/overview" class="btn btn-primary mt-4">Get Started</a>
       <div class="text-left">
         <pre><code>// index.ejs
 <%%= `Hello, PocketPages!` %>
