--- a/app/app.css
+++ b/app/app.css
@@ -20,3 +20,34 @@
     background-color: #282c34 !important;
   }
 }
+
+div.code-toolbar > .toolbar {
+  opacity: initial;
+}
+
+div.code-toolbar > .toolbar > .toolbar-item > a,
+div.code-toolbar > .toolbar > .toolbar-item > button,
+div.code-toolbar > .toolbar > .toolbar-item > span {
+  @apply text-neutral-content bg-neutral-700 lowercase p-0.5 pb-1;
+}
+
+div.code-toolbar > .toolbar > .toolbar-item > a:hover,
+div.code-toolbar > .toolbar > .toolbar-item > a:focus,
+div.code-toolbar > .toolbar > .toolbar-item > button:hover,
+div.code-toolbar > .toolbar > .toolbar-item > button:focus,
+div.code-toolbar > .toolbar > .toolbar-item > span:hover,
+div.code-toolbar > .toolbar > .toolbar-item > span:focus {
+  @apply bg-neutral-600 text-neutral-content;
+}
+
+div.code-toolbar > .toolbar > .toolbar-item > a[data-copy-state='copy-success'],
+div.code-toolbar
+  > .toolbar
+  > .toolbar-item
+  > button[data-copy-state='copy-success'],
+div.code-toolbar
+  > .toolbar
+  > .toolbar-item
+  > span[data-copy-state='copy-success'] {
+  @apply text-success;
+}
