--- a/app/pb_hooks/pages/(splash)/index.ejs
+++ b/app/pb_hooks/pages/(splash)/index.ejs
@@ -5,7 +5,7 @@
       <p class="">Like PHP, but JS + PocketBase</p>
       <a href="/docs/overview" class="btn btn-primary mt-4">Get Started</a>
       <div class="text-left">
-        <pre><code>// index.ejs
+        <pre><code class="language-ejs">// index.ejs
 <%%= `Hello, PocketPages!` %>
 </code></pre>
       </div>
