--- a/app/pb_hooks/pages/assets/app.css
+++ b/app/pb_hooks/pages/assets/app.css
@@ -2425,6 +2425,10 @@ pre {
   height: 1.5rem;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .min-h-full {
   min-height: 100%;
 }
@@ -2592,6 +2596,12 @@ div.code-toolbar
   > span[data-copy-state='copy-success'] {
   --tw-text-opacity: 1;
   color: var(--fallback-su,oklch(var(--su)/var(--tw-text-opacity)));
+}
+
+@media (min-width: 768px) {
+  .md\:w-full {
+    width: 100%;
+  }
 }
 
 @media (min-width: 1024px) {
