--- a/starters/daisyui/app/pb_hooks/pages/index.ejs
+++ b/starters/daisyui/app/pb_hooks/pages/index.ejs
@@ -1,19 +1,15 @@
 <div class="hero min-h-screen bg-base-200">
   <div class="hero-content text-center">
     <div class="max-w-md">
-      <h1 class="text-5xl font-bold">Alpine + HTMLx + Daisy UI</h1>
-      <p class="py-6">The most official PocketPages starter kit.</p>
+      <h1 class="text-5xl font-bold">Daisy UI</h1>
+      <p class="py-6">The official PocketPages starter kit.</p>
       <div class="mockup-code text-left">
         <pre data-prefix="$"><code>code .</code></pre>
       </div>
       <div>
         Ready to rumble with:
         <ul>
-          <li>PocketBase JS SDK</li>
           <li>Daisy UI</li>
-          <li>Font Awesome</li>
-          <li>AlpineJS</li>
-          <li>HTMLx</li>
         </ul>
       </div>
     </div>
