--- a/starters/daisyui/app/pb_hooks/pages/+layout.ejs
+++ b/starters/daisyui/app/pb_hooks/pages/+layout.ejs
@@ -37,7 +37,7 @@
           <div class="hidden flex-none lg:block">
             <ul class="menu menu-horizontal">
               <!-- Navbar menu content here -->
-              <li><a href="/docs">Docs</a></li>
+              <li><a href="/login">Login</a></li>
             </ul>
           </div>
         </div>
