--- a/app/pb_hooks/pages/assets/app.css
+++ b/app/pb_hooks/pages/assets/app.css
@@ -2392,6 +2392,10 @@ pre {
   background-color: #282c34 !important;
 }
 
+.absolute {
+  position: absolute;
+}
+
 .sticky {
   position: sticky;
 }
