--- a/docs/app/(main)/docs/+layout.ejs
+++ b/docs/app/(main)/docs/+layout.ejs
@@ -1,8 +1,23 @@
-<div class="flex flex-row">
-  <div class="flex flex-col justify-top p-4 toc top-16 bg-neutral-200 w-52">
-    <%- include(`toc.md`) %>
+<div class="drawer lg:drawer-open">
+  <input id="my-drawer-2" type="checkbox" class="drawer-toggle" />
+  <div class="drawer-content flex flex-col p-4">
+    <label
+      for="my-drawer-2"
+      class="btn btn-primary drawer-button lg:hidden m-8"
+    >
+      Table of Contents
+    </label>
+    <%- slot %>
+    <!-- Page content here -->
   </div>
-  <div class="flex flex-col justify-top p-10">
-    <article class="prose"><%- slot %></article>
+  <div class="drawer-side">
+    <label
+      for="my-drawer-2"
+      aria-label="close sidebar"
+      class="drawer-overlay"
+    ></label>
+    <ul class="menu bg-base-200 text-base-content min-h-full w-64 p-4 m-0 toc">
+      <%- include(`toc.md`) %>
+    </ul>
   </div>
 </div>
