--- a/app/(main)/+layout.ejs
+++ b/app/(main)/+layout.ejs
@@ -32,7 +32,7 @@
         </ul>
       </div>
     </div>
-    <article class="prose max-w-none"><%- slot %></article>
+    <%- slot %>
   </div>
   <div class="drawer-side">
     <label
