--- a/app/_include/browser.ejs
+++ b/app/_include/browser.ejs
@@ -1,4 +1,5 @@
-<div class="mockup-browser bg-primary border w-80 md:w-full">
+<div class="max-w-lg">
+<div class="mockup-browser bg-primary border w-full ">
   <div class="mockup-browser-toolbar">
     <div class="input">
       <%= (typeof url !== 'undefined' && url) || `https://myinstance.pockethost.io` %>
@@ -7,4 +8,5 @@
   <div class="bg-base-100 text-left px-4 pb-32" <%- (typeof bodyTags !== 'undefined' && bodyTags)||'' %>>
     <%- (typeof content !== 'undefined' && content)||`This page is empty.`%>
   </div>
+</div>
 </div>
