--- a/app/(splash)/index.ejs
+++ b/app/(splash)/index.ejs
@@ -1,8 +1,9 @@
 <div class="hero min-h-screen bg-base-200">
   <div class="hero-content text-center">
     <div class="w-full flex flex-col items-center">
+      <h1 class="text-5xl font-bold mb-2">PocketPages</h1>
+      <img src="apple-touch-icon.png" />
       <h1 class="text-5xl font-bold mb-2">Server-Side PocketBase apps</h1>
-      <p class="font-bold mb-1">Like PHP, but JS + PocketBase</p>
       <div class="text-left w-full">
         <pre><code class="language-bash ">bunx pocketpages new mynextapp</code></pre>
       </div>
@@ -21,16 +22,6 @@
       <a href="/docs/overview" class="btn btn-accent mt-4 w-full"
         >Read the Docs</a
       >
-    </div>
-  </div>
-</div>
-<div class="hero min-h-screen bg-base-200">
-  <div class="hero-content text-center">
-    <div class="w-full flex flex-col items-center">
-      <div class="w-full max-w-xl">
-        <h1 class="text-5xl font-bold">PocketPages</h1>
-        <p class="py-6">Like PHP, but JS + PocketBase</p>
-      </div>
     </div>
   </div>
 </div>
