--- a/app/(splash)/index.ejs
+++ b/app/(splash)/index.ejs
@@ -3,7 +3,9 @@
     <div class="w-full flex flex-col items-center">
       <h1 class="text-5xl font-bold mb-2">PocketPages</h1>
       <img src="apple-touch-icon.png" />
-      <h1 class="text-5xl font-bold mb-2">Server-Side PocketBase apps</h1>
+      <h1 class="text-5xl font-bold mb-2">
+        Server-Side web pages for PocketBase
+      </h1>
       <div class="text-left w-full">
         <pre><code class="language-bash ">bunx pocketpages new mynextapp</code></pre>
       </div>
