--- a/app/(splash)/index.ejs
+++ b/app/(splash)/index.ejs
@@ -21,9 +21,7 @@
         <div class="bg-base-100 text-left px-4 pb-32">Hello, PocketPages!</div>
       </div>
 
-      <a href="/docs/overview" class="btn btn-accent mt-4 w-full"
-        >Read the Docs</a
-      >
+      <a href="/docs/overview" class="btn btn-accent mt-4 w-full">Read the Docs</a>
     </div>
   </div>
 </div>
