--- a/docs/pb_hooks/pages/+layout.ejs
+++ b/docs/pb_hooks/pages/+layout.ejs
@@ -25,7 +25,7 @@
       </div>
     </section>
     <%- slot%>
-    <script src="/assets/prism.js" defer></script>
+    <script src="<%=asset('/assets/prism.js')%>" defer></script>
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"
