--- a/docs/pb_hooks/pages/(splash)/index.ejs
+++ b/docs/pb_hooks/pages/(splash)/index.ejs
@@ -1,34 +1,125 @@
 <div class="hero min-h-screen bg-base-200">
-  <div class="hero-content text-center">
-    <div class="w-full flex flex-col items-center">
+  <div class="hero-content text-center max-w-2xl">
+    <div class="flex flex-col items-center">
       <h1 class="text-5xl font-bold mb-2">PocketPages</h1>
       <img src="apple-touch-icon.png" />
-      <h1 class="text-5xl font-bold mb-2">
-        Server-Side web pages for PocketBase
-      </h1>
-      <div class="text-left items-center flex flex-col w-full max-w-[320px] sm:max-w-full ">
-        <div class="text-sm">PocketPages is a <a href="https://pocodex.dev">pocodex</a> plugin.</div>
-        <pre class="w-full max-w-[320px] sm:max-w-full"><code class="language-bash">bunx pocodex init --trust
-pocketbase install pocketpages --dir=pb_data</code></pre>
-        <!-- <div class="text-xs p-2 rounded-md m-4 bg-orange-400 text-content">
-          <code>pocketbase install</code> not working? PocketPages requires pocodex, the open-source PocketBase plugin exchange.
-          <div class=" block m-2 "><a class="btn btn-xs btn-primary" href="https://pocodex.dev">install pocodex</a></div>
-        </div> -->
-        <div class="text-left w-full  overflow max-w-full">
-          <pre><code class="language-ejs ">// index.ejs
+      <div class="text-3xl font-bold mb-2">
+        Build faster with Server-Side web pages - no build chain or complicated
+        tech stack required.
+      </div>
+
+      <div class="text-left w-full overflow max-w-full">
+        <pre><code class="language-ejs ">// pb_hooks/pages/index.ejs
 <%%= `Hello, PocketPages!` %></code></pre>
-        </div>
+      </div>
 
-        <div class="mockup-browser bg-neutral border w-80 sm:w-full">
-          <div class="mockup-browser-toolbar">
-            <div class="input">http://localhost:8090</div>
+      <div class="mockup-browser bg-neutral border w-80 sm:w-full">
+        <div class="mockup-browser-toolbar">
+          <div class="input">http://localhost:8090</div>
+        </div>
+        <div class="bg-base-100 text-left px-4 pb-32">Hello, PocketPages!</div>
+      </div>
+
+      <div class="bg-neutral-300 mt-20 p-10 rounded-md mt-4">
+        <div class="text-2xl font-bold">Quickstart</div>
+        <div class="text-left w-full overflow max-w-full text-2xl mt-5 mb-5">
+          Step 1: Install pocketpages.
+        </div>
+        <div role="tablist" class="tabs tabs-lifted neutral">
+          <input
+            type="radio"
+            name="my_tabs_2"
+            role="tab"
+            class="tab"
+            aria-label="bun"
+            checked="checked"
+          />
+          <div
+            role="tabpanel"
+            class="tab-content bg-base-100 border-base-300 rounded-box p-6"
+          >
+            <pre
+              class="w-full max-w-[320px] sm:max-w-full"
+            ><code class="language-bash">bun add pocketpages
+</code></pre>
           </div>
-          <div class="bg-base-100 text-left px-4 pb-32">Hello, PocketPages!</div>
+
+          <input
+            type="radio"
+            name="my_tabs_2"
+            role="tab"
+            class="tab"
+            aria-label="pnpm"
+          />
+          <div
+            role="tabpanel"
+            class="tab-content bg-base-100 border-base-300 rounded-box p-6"
+          >
+            <pre
+              class="w-full max-w-[320px] sm:max-w-full"
+            ><code class="language-bash">pnpm add pocketpages
+</code></pre>
+          </div>
+
+          <input
+            type="radio"
+            name="my_tabs_2"
+            role="tab"
+            class="tab"
+            aria-label="yarn"
+          />
+          <div
+            role="tabpanel"
+            class="tab-content bg-base-100 border-base-300 rounded-box p-6"
+          >
+            <pre
+              class="w-full max-w-[320px] sm:max-w-full"
+            ><code class="language-bash">yarn add pocketpages
+</code></pre>
+          </div>
+
+          <input
+            type="radio"
+            name="my_tabs_2"
+            role="tab"
+            class="tab"
+            aria-label="npm"
+          />
+          <div
+            role="tabpanel"
+            class="tab-content bg-base-100 border-base-300 rounded-box p-6"
+          >
+            <pre
+              class="w-full max-w-[320px] sm:max-w-full"
+            ><code class="language-bash">npm add pocketpages
+</code></pre>
+          </div>
         </div>
 
-        <a href="/docs/overview" class="btn btn-accent mt-4 w-full">Read the Docs</a>
+        <div class="text-left w-full overflow max-w-full text-2xl mt-5 mb-5">
+          Step 2: Copy the minimal starter.
+        </div>
+        <pre
+          class="w-full max-w-[320px] sm:max-w-full"
+        ><code class="language-bash">degit benallfree/pocketpages/starter/minimal/pb_hooks pb_hooks
+</code></pre>
+
+        <div class="text-left w-full overflow max-w-full text-2xl mt-5 mb-5">
+          Step 3: Run.
+        </div>
+        <pre
+          class="w-full max-w-[320px] sm:max-w-full"
+        ><code class="language-bash">pocketbase --dir=pb_data --dev serve 
+</code></pre>
+
+        <div
+          class="text-left items-center flex flex-col w-full max-w-[320px] sm:max-w-full"
+        >
+          <a href="/docs/overview" class="btn btn-accent mt-4 w-full"
+            >Read the Docs</a
+          >
+        </div>
       </div>
     </div>
-
   </div>
 </div>
