docs update: installation

--- a/docs/pb_hooks/pages/(splash)/index.ejs
+++ b/docs/pb_hooks/pages/(splash)/index.ejs
@@ -22,96 +22,7 @@
 
       <div class="bg-neutral-300 mt-20 p-10 rounded-md mt-4">
         <div class="text-2xl font-bold">Quickstart</div>
-        <div class="text-left w-full overflow max-w-full text-2xl mt-5 mb-5">
-          Step 1: Install pocketpages.
-        </div>
-        <div role="tablist" class="tabs tabs-lifted neutral">
-          <input
-            type="radio"
-            name="my_tabs_2"
-            role="tab"
-            class="tab"
-            aria-label="bun"
-            checked="checked"
-          />
-          <div
-            role="tabpanel"
-            class="tab-content bg-base-100 border-base-300 rounded-box p-6"
-          >
-            <pre
-              class="w-full max-w-[320px] sm:max-w-full"
-            ><code class="language-bash">bun add pocketpages
-</code></pre>
-          </div>
-
-          <input
-            type="radio"
-            name="my_tabs_2"
-            role="tab"
-            class="tab"
-            aria-label="pnpm"
-          />
-          <div
-            role="tabpanel"
-            class="tab-content bg-base-100 border-base-300 rounded-box p-6"
-          >
-            <pre
-              class="w-full max-w-[320px] sm:max-w-full"
-            ><code class="language-bash">pnpm add pocketpages
-</code></pre>
-          </div>
-
-          <input
-            type="radio"
-            name="my_tabs_2"
-            role="tab"
-            class="tab"
-            aria-label="yarn"
-          />
-          <div
-            role="tabpanel"
-            class="tab-content bg-base-100 border-base-300 rounded-box p-6"
-          >
-            <pre
-              class="w-full max-w-[320px] sm:max-w-full"
-            ><code class="language-bash">yarn add pocketpages
-</code></pre>
-          </div>
-
-          <input
-            type="radio"
-            name="my_tabs_2"
-            role="tab"
-            class="tab"
-            aria-label="npm"
-          />
-          <div
-            role="tabpanel"
-            class="tab-content bg-base-100 border-base-300 rounded-box p-6"
-          >
-            <pre
-              class="w-full max-w-[320px] sm:max-w-full"
-            ><code class="language-bash">npm add pocketpages
-</code></pre>
-          </div>
-        </div>
-
-        <div class="text-left w-full overflow max-w-full text-2xl mt-5 mb-5">
-          Step 2: Copy the minimal starter.
-        </div>
-        <pre
-          class="w-full max-w-[320px] sm:max-w-full"
-        ><code class="language-bash">degit benallfree/pocketpages/starter/minimal/pb_hooks pb_hooks
-</code></pre>
-
-        <div class="text-left w-full overflow max-w-full text-2xl mt-5 mb-5">
-          Step 3: Run.
-        </div>
-        <pre
-          class="w-full max-w-[320px] sm:max-w-full"
-        ><code class="language-bash">pocketbase --dir=pb_data --dev serve 
-</code></pre>
-
+        <%- include(`../_include/quickstart.ejs`) %>
         <div
           class="text-left items-center flex flex-col w-full max-w-[320px] sm:max-w-full"
         >
