update starter kits

--- a/starters/daisyui/pb_hooks/pages/+layout.ejs
+++ b/starters/daisyui/pb_hooks/pages/+layout.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>PocketPages</title>
-    <link href="/app.css" rel="stylesheet" />
+    <link href="<%=asset('/app.css')%>" rel="stylesheet" />
   </head>
   <body>
     <div class="drawer">
