feat: meta function

--- a/docs/pb_hooks/pages/+layout.ejs
+++ b/docs/pb_hooks/pages/+layout.ejs
@@ -3,9 +3,26 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>PocketPages</title>
+    <title><%=meta('title') || 'PocketPages'%></title>
     <link href="<%=asset('/assets/prism.css')%>" rel="stylesheet" />
     <link href="<%=asset(`/assets/app.css`)%>" rel="stylesheet" />
+    <meta
+      name="description"
+      content="<%=meta('description') || 'Server-side pages for PocketBase'%>"
+    />
+    <meta property="og:title" content="<%=meta('title') || 'PocketPages'%>" />
+    <meta
+      property="og:description"
+      content="<%=meta('description') || 'Server-side pages for PocketBase'%>"
+    />
+    <meta
+      property="og:image"
+      content="<%=meta('image') || 'https://pocketpages.dev/android-chrome-512x512.png'%>"
+    />
+    <meta
+      property="og:url"
+      content="<%=meta('path') ? `https://pocketpages.dev${meta('path')}` : meta('url') || `https://pocketpages.dev${ctx.request().url}`%>"
+    />
   </head>
 
   <body>
